<resources>
    <string name="app_name">Masafah Driver</string>
    <string name="mobile">Mobile</string>
    <string name="upload_shipment_photos">Upload shipment photos</string>
    <string name="shipment_name">Shipment name*</string>
    <string name="description">Description*</string>
    <string name="next">Next</string>
    <string name="items">Items</string>
    <string name="add_new_shipment">Add new shipment</string>
    <string name="add_new_item">Add new item</string>
    <string name="select_location">Select location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="price">Price</string>
    <string name="shipment_number">Shipment #</string>
    <string name="test_description" translatable="false">This is the description for the shipment that has been added as a part of \'My Shipments\'</string>
    <string name="pending">Pending</string>
    <string name="distance">Distance</string>
    <string name="accepted">Accept</string>
    <string name="by">By</string>
    <string name="shipment_details">Shipment details</string>
    <string name="delivered">Delivered</string>
    <string name="total">Total:</string>
    <string name="canceled">Canceled</string>
    <string name="no_shipments_message">There are no shipments</string>
    <string name="shipment_history">Shipment history</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="company_details">Company details</string>
    <string name="company_test_description" translatable="false">International shipping, courier, and packaging service. DHL was
        established in 1969 by Adrian Dalsey, Larry Hillblom, and Robert Lynn. The name DHL is derived from the
        first initial of each founder\'s last name. DHL has numerous cargo transport systems including planes,
        trains, and boats. DHL serves more than 120,000 designations and 220 countries. As of 2002, Deutsche Post
        World Net owns the majority of shares.</string>
    <string name="continue_button">Continue</string>
    <string name="my_shipments">My shipments</string>
    <string name="orders">Orders</string>
    <string name="multiple_selection_message">You can select multiple shipments to deliver at once</string>
    <string name="list_of_orders">List of orders</string>
    <string name="you_need_to_pay">You need to pay</string>
    <string name="pickup">Pickup</string>
    <string name="buy_points">Buy points</string>
    <string name="please_select_one_package">Please select one package:</string>
    <string name="please_enter_email_and_password">Please enter your email and password :</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="pay_online">Pay Online</string>
    <string name="pay_by_wallet">Pay by Wallet :</string>
    <string name="or">Or</string>
    <string name="use_free_delivery">Use free delivery</string>
    <string name="thank_you">Thank you</string>
    <string name="your_payment_submitted">Your payment has been submitted. now you can see your shipment details.</string>
    <string name="wallet">Wallet</string>
    <string name="add_balance">Add balance</string>
    <string name="my_balance">My Balance</string>
    <string name="transaction_history">Transaction history</string>
    <string name="order_id">Order id :</string>
    <string name="add">Add</string>
    <string name="shipments">Shipments</string>
    <string name="list_of_shipments">List of shipments</string>
    <string name="error_occurred">Error occurred, Please try again.</string>
    <string name="failed">Failed</string>
    <string name="confirme_password">Confirme password</string>
    <string name="select_country">Select country</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_picture_from">Select picture from</string>
    <string name="please_select_picture">Please select picture</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_not_match_password">Confirm password not match password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="select_language">Select language</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="language">Language</string>
    <string name="my_details">My details</string>
    <string name="update">Update</string>
    <string name="kd">KD</string>
    <string name="free_delevery">Free delivery(s)</string>
    <string name="add_successfully">Add successfully.</string>
    <string name="add_custom_amount">Add your amount</string>
    <string name="amount_in_kd">Amount in KD</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_your_amount">Please enter your amount</string>
    <string name="pick_time_from">Pickup time :</string>
    <string name="pick_time_to">Pick time to :</string>
    <string name="tel">Tel :</string>
    <string name="are_you_want_to_call">Are you want to call</string>
    <string name="question_mark">\?</string>
    <string name="call">Call</string>
    <string name="today">Today</string>
    <string name="to">To</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="invoice">Invoice</string>
    <string name="total_shipment">Total shipment :</string>
    <string name="total_amount">Total amount :</string>
    <string name="free_deliver_used">Free delivery used</string>
    <string name="wallet_amount_used">Wallet amount used :</string>
    <string name="pay_by_card">Pay by card :</string>
    <string name="total_pay_by_card">Total pay by card ( </string>
    <string name="confirm">Confirm</string>
    <string name="select_payment_method">Select payment method :</string>
    <string name="redirect_to_payment">Redirecting to payment</string>
    <string name="all">All</string>
    <string name="select_city">Select City</string>
    <string name="from">From</string>
    <string name="delivery_now">DELIVERY NOW (</string>
    <string name="search">Search</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="ok">Ok</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset">Reset</string>
</resources>
